--- a/examples/tensorflow/Dockerfile.example.tensorflow
+++ b/examples/tensorflow/Dockerfile.example.tensorflow
@@ -29,4 +29,9 @@ RUN pip install tensorflow-gpu==${TENSORFLOW_VERSION} && \
 RUN ln -s /usr/local/cuda/targets/x86_64-linux/lib/stubs/libcuda.so \
           /usr/local/cuda/targets/x86_64-linux/lib/stubs/libcuda.so.1
 
+#update and upgrade, install git
+RUN apt-get update && apt-get upgrade -y && apt-get -y install git
+
+ENV LC_ALL C
+
 WORKDIR /root
